Update docs for Spark 4.0.x and fix empty schema inference
- Update README.md, CLAUDE.md, SPARK_CONNECT_GAP_ANALYSIS.md for Spark 4.0.x
- JVM flags now required on ALL platforms (not just ARM64)
- PySpark version 3.5.3 → 4.0.1 in prerequisites
- Fix empty schema handling in analyzePlan() for column operations
- Add M32 dev journal entry documenting Spark 4.0.1 integration

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>